[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
actix-web = "4"
envconfig = "0.10.0"
serde_with = { version = "3.8.1", features = ["chrono_0_4"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde = { version = "1.0.202", features = ["derive"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "registry", "tracing-log"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"]}
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
postgres = "0.19.7"
redis = {version ="0.25.3", features = ["tokio-comp", "connection-manager"]}
lapin = "2.3.4"
futures = "0.3"
rand = "0.8.5"
rust-argon2 = "2.1.0"
actix-web-lab = "0.20.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
