[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
lazy_static = "1.4"
actix-web = "4"
envconfig = "0.10.0"
serde_with = { version = "3.8.1", features = ["chrono_0_4"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde = { version = "1.0.202", features = ["derive"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "registry", "tracing-log"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"]}
redis = {version ="0.25.3", features = ["tokio-comp", "connection-manager"]}
lapin = "2.3.4"
futures = "0.3"
rand = "0.8.5"
rust-argon2 = "2.1.0"
actix-web-lab = "0.20.2"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }
rust-s3 = "0.33.0"
actix-multipart = "0.6.1"
infer = "0.15.0"
bytes = "1.6.0"
once_cell = "1.19.0"
sha1 = "0.10.6"
hex = "0.4.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
