[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
lazy_static = "1.4"
actix-web = "4"
envconfig = "0.10.0"
serde_with = { version = "3.8.1", features = ["chrono_0_4"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde = { version = "1.0.202", features = ["derive"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "registry", "tracing-log"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"]}
redis = {version ="0.25.3", features = ["tokio-comp", "connection-manager"]}
lapin = "2.3.4"
futures = "0.3"
rand = "0.8.5"
rust-argon2 = "2.1.0"
actix-web-lab = "0.20.2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros"] }
# Force the transitive openssl-sys (pulled by native-tls via reqwest/rust-s3/
# influxdb2/etc.) to build vendored from source, so the musl image never needs
# a system OpenSSL. Not used directly in code.
openssl-sys = { version = "0.9", features = ["vendored"] }
# The old rustix 0.37 (pulled by async-io 1.x via lapin) fails to compile its
# linux_raw backend on the musl toolchain (rustc_attrs misdetection). Force its
# libc backend, which compiles cleanly. Not used directly in code.
rustix = { version = "0.37", features = ["use-libc"] }
rust-s3 = "0.33.0"
actix-multipart = "0.6.1"
infer = "0.15.0"
bytes = "1.6.0"
once_cell = "1.19.0"
sha1 = "0.10.6"
hex = "0.4.3"
gql_client = "1.0.7"
actix-cors = "0.7.0"
prometheus = { version = "0.13.4", features = ["process"] }
futures-util = "0.3.30"
prometheus-http-query = "0.8.3"
influxdb2 = "0.5.1"
influxdb2-structmap = "0.2.0"
serde_repr = "0.1.19"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
optional-field = "0.1.6"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
